--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,7 @@ html {
     background-image: url("../images/backcover.svg");
     background-repeat: no-repeat;
     background-size: 1250px;
+    position: relative;
     background-position-x: 680px;
     background-position-y: -150px;
 }
@@ -25,6 +26,7 @@ nav {
     align-items: center;
     justify-content: space-between;
     margin-top: 2rem;
+
 
 
 }
@@ -96,23 +98,166 @@ nav {
     border-radius: 50px;
 }
 
+.imgs-div {
+    position: relative;
+}
+
 .right-main-img {
     position: absolute;
     height: 1000px;
-    top: 100px;
-    left: 520px;
+    top: 0px;
+    left: -230px;
 }
 
 .vector-dot {
     position: absolute;
     width: 26px;
-    bottom: -20px;
-    left: 600px;
+    bottom: -40px;
+    left: -198px;
 }
 
 .vector-img {
     width: 130px;
     position: absolute;
-    bottom: -140px;
-    left: 520px;
+    bottom: -160px;
+    left: -280px;
+}
+
+@media(max-width:1520px) {
+
+    .left-section {
+        padding-left: 2rem;
+    }
+
+
+    .left-section h4 {
+        padding-right: 5rem;
+    }
+
+    .right-main-img {
+        height: 800px;
+        left: -138px;
+    }
+
+    .vector-img {
+        width: 104px;
+        left: -160px;
+    }
+
+    .vector-dot {
+        width: 21px;
+        left: -118px;
+    }
+
+}
+
+@media(max-width:1200px) {
+
+    nav {
+        margin-left: 1rem;
+        margin-right: 1rem;
+    }
+
+    .nav-items {
+        gap: 1rem;
+    }
+
+    .intro-section {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    .left-section {
+        padding: 0;
+        align-items: center;
+        text-align: center;
+    }
+
+    .left-section h1 {
+        margin-top: 1rem;
+        margin-bottom: 3rem;
+    }
+
+    .left-section h4 {
+        margin-bottom: 4rem;
+    }
+
+    .imgs-div {
+        /* height: 300px; */
+        display: flex;
+        justify-content: center;
+        padding: 5rem 0 0 0;
+    }
+
+
+    .right-main-img {
+        position: static;
+        height: 500px;
+    }
+
+    .left-section h1 {
+        text-shadow: 10px 20px 50px rgba(0, 0, 0, 0.15);
+    }
+
+    .learn-more-btn {
+        margin-bottom: 4rem;
+    }
+
+    .vector-img {
+        display: none;
+    }
+
+    .vector-dot {
+        display: none;
+    }
+
+
+    .left-section h4 {
+        padding: 0 5rem;
+        text-shadow: 10px 20px 50px rgba(0, 0, 0, 0.15);
+    }
+
+    html {
+        background-position-x: 400px;
+        background-position-y: 0px;
+    }
+}
+
+@media(max-width:768px) {
+    nav {
+        flex-wrap: wrap;
+    }
+
+    .signin-btn {
+        margin: 0 2rem;
+        font-size: 24px;
+    }
+
+    .nav-items {
+        padding-top: 1rem;
+        gap: 2.5rem;
+        margin: 0 auto;
+        order: 2;
+    }
+
+    .nav-item {
+        font-size: 16px;
+    }
+
+    .right-main-img {
+        height: 350px;
+    }
+
+    .left-section h1 {
+        font-size: 64px;
+    }
+
+    .left-section h4 {
+        font-size: 18px;
+    }
+
+    html {
+        background-position-x: 200px;
+        background-position-y: 0px;
+    }
 }
